# AtividadesCG

./: .gitignore  CMakeLists.txt  README.md
Assets/Bricks104_1K-JPG/: Bricks104_1K-JPG.blend  Bricks104_1K-JPG.mtlx  Bricks104_1K-JPG.tres  Bricks104_1K-JPG.usdc
Assets/Football Goal/: football_goal.mtl
Assets/Ground003_1K-JPG/: Ground003_1K-JPG.blend  Ground003_1K-JPG.mtlx  Ground003_1K-JPG.tres  Ground003_1K-JPG.usdc
Assets/Pallone/: Ball OBJ.mtl
Assets/Tiles081_1K-JPG/: Tiles081_1K-JPG.blend  Tiles081_1K-JPG.mtlx  Tiles081_1K-JPG.tres  Tiles081_1K-JPG.usdc
Grau-A-M1-Hello3d/: README.md
Grau-A-M1-Hello3d/src/: Hello3D.cpp  glad.c
Grau-A-M2-Cubo/: README.md
Grau-A-M2-Cubo/src/: M2.cpp
Grau-A-M3-Texturas/: README.md
Grau-A-M3-Texturas/assets/: cube.mtl  generate_texture.py  texture.tga
Grau-A-M3-Texturas/src/: LoadSimpleOBJ.cpp  LoadSimpleOBJ.h  M3.cpp
Grau-A-M4-Iluminacao/: README.md
Grau-A-M4-Iluminacao/assets/: cube.mtl
Grau-A-M4-Iluminacao/src/: M4.cpp
Grau-A-M5-Camera/: README.md
Grau-A-M5-Camera/src/: Camera.cpp  Camera.h  LoadSimpleOBJ.cpp  M5.cpp
Grau-A-M6-Trajetorias/: README.md
Grau-A-M6-Trajetorias/assets/: trajectories.txt
Grau-A-M6-Trajetorias/src/: LoadSimpleOBJ.h  M6.cpp
Grau-B-Projeto-Final/: README.md  scene.json
Grau-B-Projeto-Final/src/: LoadSimpleOBJ.cpp  LoadSimpleOBJ.h  ProjetoFinal.cpp
Grau-B-Vivencial-2/: README.md
Grau-B-Vivencial-2/src/: LoadSimpleOBJ.h  Vivencial2.cpp
include/glad/: glad.h
